XMPP4R 0.3 (**/**/****)
=======================
* SRV lookup capability in Client#connect

XMPP4R 0.2 (20/10/2005)
=======================
* Workarounds for REXML bugs.
* Presences are now Comparable according to priority or interest
* fixed a serious bug in Stream#send which caused some lockups. Reported by
  chunlinyao@gmail.com.
* Moved REXML::Element#add to REXML::Element#typed_add to keep add accessible
* Rewritten Roster helper
* Added Vcard helper and improved IqVcard
* XMLStanza id generator
* Support for Roster Item Exchange (JEP-0093 and JEP-0144)
* Client#password= to change client's account password
* Documentation fixes

XMPP4R 0.1 (12/09/2005)
=======================
* first public release.